@@ -1,3 +1,8 @@
+4 July 2018: Wouter
+	- Fix #4112: Fix that unbound-anchor -f /etc/resolv.conf will not pass
+	  if DNSSEC is not enabled.  New option -R allows fallback from
+	  resolv.conf to direct queries.
+
 3 July 2018: Wouter
 	- Better documentation for unblock-lan-zones and insecure-lan-zones
 	  config statements.
